Fix jiggle scroll behaviour on too large right column in about me

--- a/raymondxyz/src/styling/App.css
+++ b/raymondxyz/src/styling/App.css
@@ -42,6 +42,20 @@ h1 {
     overflow: hidden
 }
 
+.left_column_content {
+    margin-top: 10px;
+    margin-left: 10vw;
+    width: 20vw;
+    overflow: hidden;
+}
+
+.right_column_content {
+    margin-left: 10vw;
+    margin-right: 10vw;
+    width: 40vw;
+    padding: 10vh 0;
+    overflow: hidden;
+}
 
 /**
 * About Me Containers
@@ -56,20 +70,6 @@ h1 {
     position: relative;
 }
 
-.left_about_content {
-    margin-top: 10px;
-    margin-left: 10vw;
-    width: 20vw;
-
-}
-
-.right_about_content {
-    margin-left: 10vw;
-    margin-right: 10vw;
-    width: 40vw;
-    padding: 10vh 0;
-}
-
 .image_column {
     flex: 25%;
     overflow: hidden;
@@ -78,11 +78,14 @@ h1 {
 .collage_image {
     width: 140px;
     height: 140px;
+    overflow: hidden;
 }
 
 /** 
 * Skills Section
 **/
+
+
 
 
 /** 
